# GolfPad

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  code_golf_scoring.py  database.py  evaluation.py  main.py  models.py  schemas.py
backend/routers/: batch_submissions.py  leaderboard.py  problems.py  submissions.py  users.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CodeEditor.tsx  CodeExecutionResult.tsx  Header.tsx  ScoreLineChart.tsx  SubmissionHistory.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: BatchUpload.tsx  Dashboard.tsx  ExportLatest.tsx  Leaderboard.tsx  Login.tsx  ProblemDetail.tsx  ProblemList.tsx  Register.tsx
frontend/src/services/: api.ts
